--- a/counter/src/App.css
+++ b/counter/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+.btn > button{
+  margin: 10px;
+  padding: 15px;
+  border: none;
+  border-radius: 20px;
+  background-color: black;
+  color: white;
+}
